package aula07.jogogalov1.console.tile;
import aula07.jogogalov1.console.View;
/**
 * Base class hierarchy of Tiles
 */
/**
 * ALREADY EXISTENT
 */
public abstract class Tile extends View {

    public void setBackground(int color) { bkColor = color; }
    @Override
    public void paint() { }
}
